update footer with my name and current year

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div id="root"></div>
-  <footer>Bloom Institute of Technology 2023</footer>
+  <footer>Byungjin Kim 2025</footer>
 </body>
 
 </html>
